- #124 Add Python EOL action
- #123 Convert all countries into modules

2025.3.0
-      Upgrade test requirements pytest to 8.3.5 and syrupy to 4.9.0
- #119 DK: Holiday "Store bededag" was abolished in 2023

2025.1.0
-      DE: Document legal sources for region 'TH' (Thüringen)
-      DE: Add holiday "Fronleichnam" in region 'TH' for communities with catholic majority
- #117 DE: Add holiday "Weltkindertag" in region 'TH' (Thüringen)
       (thanks to Slarky)
-      Add support for Python 3.13, drop Python 3.8

2024.11.1
- #115 US: Implement federal holidays
       (thanks to J. David Stark)

2024.11.0
-      HU: Add non-working days for 2025 in Hungary

2024.10.0
-      ES: Implement 2025 holidays of Spain

2024.8.3
- #112 AU: Add country AU
       (thanks to Alex Smith)

2024.8.2
- #113 Fix emitter output

2024.8.1
- #111 Refactor core classes, replace date parsing and custom date functions with DSL
- #110 Test holidays are only defined for valid regions
- #109 Enable holidata to be calculated outside confirmed range

2024.8.0
-      Add support for Python 3.12, replace 'snapshottest' with 'syrupy'
- #105 DE: Holiday "Mariä Himmelfahrt" missing for region 'BY' in locale 'de-DE'
       (thanks to Alexei Samokvalov)
-      DE: Convert DE into module

2024.6.0
- #102 US: Fix error in calculation of 'Day after Thanksgiving'
       (thanks to Peter J. Mello)
- #103 DE: Fix region code for Bremen
       (thanks to Olaf Sebelin)

2023.11.1
-      HU: Add non-working days for 2024 in Hungary
- #97  Merge locale and country
-      Fix permalinks for holidays in locale de-DE for region BE

2023.11.0
-      es-ES: Implement 2024 holidays of Spain
-      Drop support for Python 3.7
-      Use double quotes instead of single quotes and f-strings

2023.4.0
-      en-GB: Add bank holiday for the coronation of King Charles III
-      Move creator functions to holidata module
-      Print proper error messages for exceptions instead of stack traces
-      Fix regex for locale
